  sequences. (Gustavo)
- Fixed bug #52929 (Segfault in filter_var with FILTER_VALIDATE_EMAIL with
  large amount of data) (CVE-2010-3710). (Adam)
- Fixed ReflectionProperty::isDefault() giving a wrong result for properties
  obtained with ReflectionClass::getProperties(). (Gustavo)
- Fixed covariance of return-by-ref constraints. (Etienne)

- Fixed bug #53198 (changing INI setting "from" with ini_set did not have any
  effect). (Gustavo)
- Fixed bug #53180 (post_max_size=0 not disabling the limit when the content
  type is application/x-www-form-urlencoded or is not registered with PHP).
  (gm at tlink dot de, Gustavo)
- Fixed bug #53144 (Segfault in SplObjectStorage::removeAll()). (Felipe)
- Fixed bug #53141 (autoload misbehaves if called from closing session).
  (ladislav at marek dot su)
- Fixed bug #53071 (SPLObjectStorage defeats gc_collect_cycles). (Gustavo)
- Fixed bug #53006 (stream_get_contents has an unpredictable behavior when the
  underlying stream does not support seeking). (Gustavo)
- Fixed bug #53021 (In html_entity_decode, failure to convert numeric entities
  with ENT_NOQUOTES and ISO-8859-1). Fixed and extended the fix of ENT_NOQUOTES 
  in html_entity_decode that had introduced the bug (rev #185591) to other
  encodings. Additionaly, html_entity_decode() now doesn't decode &#34; if
  ENT_NOQUOTES is given. (Gustavo)
- Fixed bug #52939 (zend_call_function does not respect ZEND_SEND_PREFER_REF).
  (Dmitry)
- Fixed bug #52981 (Unicode casing table was out-of-date. Updated with
  UnicodeData-6.0.0d7.txt and included the source of the generator program with
  the distribution) (Gustavo).
- Fixed bug #52971 (PCRE-Meta-Characters not working with utf-8). (Felipe)
- Fixed bug #52947 (segfault when ssl stream option capture_peer_cert_chain
  used). (Felipe)
- Fixed bug #52944 (Invalid write on second and subsequent reads with an
  inflate filter fed invalid data). (Gustavo)
- Fixed bug #52941 (The 'iconv_mime_decode_headers' function is skipping